app/assets/stylesheets/base/splashpage/song_grid.scss
@import '../../variables';



.song-grid{
  display: grid;
  // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 160px 160px 160px 160px 160px 160px;
  grid-template-rows: 1fr 1fr 1fr;
  column-gap:10px;
  row-gap: 25px;
  justify-content: center;

  margin: 0 auto;

  width: 1090px;
 
  

}

.song-grid-element{
  // height: 235px;
  // width: 185px;

  height: 205px;
  width: 160px;

  // background: lightblue;
 

  display: flex;
  flex-direction: column;
  align-items: center;
  


  button{
    padding:0;
    outline: none;
    height: 160px;
    position: relative;


    .cover-div{
      height: 100%;
      width: 100%;

      img{
        max-width: 100%;
        max-height:100%;
        outline: 1px solid lightgray;
        outline-offset: -1px;
      }
      // .dark-gradient{
        //   background:linear-gradient(to bottom, rgba(216, 0, 0, 1), rgb(0, 0, 0));
        
        // }
      
      
      
      .play-icon, .play-icon-background{
        position: absolute;
        bottom: 50%;
        right: 50%;
        transform: translate(50%, 50%);
      }
      .play-icon{
        
        height: 33.333%;
        width: 33.333%;
        color: $soundcloud-color;
        // top: -50%;
        // height: 50%;
        // width: 50%;
        // transform: translateY(-17.5%);
        
        // top:
      }
      .play-icon-background{
        height:33%;
        width:33%;
        color: white;
      }
    }
    .dark-gradient::after {
        display: block;
        position: relative;
        background-image: linear-gradient(to bottom, transparent 0%, black 370%);
        // margin-top: -150px;
        height: 100%;
        width: 100%;
        content: '';
        bottom: 100%;
      }
  } 
  .text-div{
    width: 100%;
    height:100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: left;

    font-family: 'Quicksand', sans-serif;

    span{
      display: inline-block;
      margin: 4px 0;
      text-align: left;

      font-weight: 900;


      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      line-height: normal;


    }
    .title{
      font-size: 15px;
      
    }
    .album-title{
      font-size: 13px;
      color: grey;
    }
  }
}

